# plutarch-core

./: .gitignore  DESIGN-2.md  DESIGN.md  DESIGN_new.md  LICENSE  MonoidDo.hs  PSL.md  Plutarch2New.hs  Plutarch2New2.hs  Plutarch2New3.hs  Plutarch2New4.hs  Plutarch2New5.hs  Plutarch2New6.hs  Plutarch2New7.hs  RATIONALE.md  README.md  flake.nix  hie.yaml  plutarch-core.cabal  plutarch-core.nix  shell.nix
Examples/: C.hs  DataKinds.hs  DataKinds2.hs  Main.hs  Nix.hs  SKI.hs  Simple.hs  ULC.hs
Plutarch/: Cont.hs  Core.hs  Core.hs-boot  Core2.hs  CoreNew.hs  Do.hs  EType.hs  Example.hs  Experimental.hs  Generics.hs  Helpers.hs  Lam.hs  Lens.hs  Optics.hs  PList.hs  PSL.hs  PType.hs  Prelude.hs  Reduce.hs  Repr.hs  Repr.hs-boot  STLC.hs  SystemF.hs  TermCont.hs  TyLam.hs  ULC.hs  UPLC.hs
Plutarch/Backends/: C.hs  Haskell.hs  Lua.hs  Nix.hs
Plutarch/CPS/: Prism.hs  Profunctor.hs
Plutarch/CPS/Optics/: Iso.hs  Lens.hs  Optic.hs  Optional.hs  Prism.hs  Traversal.hs
Plutarch/Frontends/: C.hs  Data.hs  Harvard.hs  IO.hs  LC.hs  Lua.hs  Nix.hs  Partial.hs  SOP.hs  Untyped.hs  WASM.hs
Plutarch/Internal/: CoerceTo.hs  SKI.hs  Unimplemented.hs  Utilities.hs  WithDictHack.hs
Plutarch/Optics/: Fix.hs  Iso.hs  Lens.hs  Optic.hs  Optional.hs  PEither.hs  PList.hs  PPair.hs  Prism.hs  Profunctor.hs  Traversal.hs
Plutarch/Repr/: Newtype.hs  Newtype.hs-boot  Primitive.hs  SOP.hs  SOP.hs-boot
