cabal-version:      3.4
name:               plutarch-core
version:            0.1.0
author:             Las Safin <me@las.rs>
license:            MIT
extra-source-files: README.md

common c
  default-language:   GHC2021
  default-extensions:
    NoFlexibleInstances
    NoMonomorphismRestriction
    NoStarIsType
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    ImpredicativeTypes
    LambdaCase
    LexicalNegation
    LiberalTypeSynonyms
    MonadComprehensions
    MultiWayIf
    NegativeLiterals
    NondecreasingIndentation
    NumDecimals
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PatternSynonyms
    QualifiedDo
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    TypeFamilies
    TypeFamilyDependencies
    UnicodeSyntax
    UnliftedFFITypes
    UnliftedNewtypes
    ViewPatterns
    OverloadedRecordDot

  ghc-options:
    -Weverything -Wno-unused-do-bind -Wno-missing-kind-signatures
    -Werror -Wno-implicit-prelude -Wno-name-shadowing -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-missing-local-signatures
    -Wno-prepositive-qualified-module -Wno-missing-import-lists
    -Wno-all-missed-specializations -Wno-unticked-promoted-constructors
    -fprint-explicit-kinds -fprint-equality-relations
    -fprint-explicit-foralls

  build-depends:
    , base                 >=4.15
    , generics-sop
    , text                 >=2
    , text-builder-linear  >=0.1
    , transformers

library
  import:          c
  exposed-modules:
    Plutarch.Backends.Nix
    Plutarch.Core
    Plutarch.Experimental
    Plutarch.Frontends.Data
    Plutarch.Frontends.LC
    Plutarch.Frontends.Nix
    Plutarch.Frontends.Partial
    Plutarch.Frontends.Untyped
    Plutarch.Helpers
    Plutarch.Internal.CoerceTo
    Plutarch.Internal.SKI
    Plutarch.Internal.Unimplemented
    Plutarch.Internal.WithDictHack
    Plutarch.Internal.Witness
    Plutarch.Prelude
    Plutarch.PType
    Plutarch.Reduce
    Plutarch.Repr
    Plutarch.Repr.Newtype
    Plutarch.Repr.Primitive
    Plutarch.Repr.SOP
    Plutarch.TermCont

executable examples
  import:        c
  main-is:       Examples/Main.hs
  build-depends: directory
  ghc-options:   -Wno-missing-home-modules -Wwarn
