cabal-version:      3.4
name:               plutarch-core
version:            0.1.0
author:             Las Safin <me@las.rs>
license:            MIT
extra-source-files: README.md

common c
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    FunctionalDependencies
    LambdaCase
    NondecreasingIndentation
    TypeFamilies

  ghc-options:
    -Weverything -Wno-unused-do-bind -Wno-missing-kind-signatures
    -Werror -Wno-implicit-prelude -Wno-name-shadowing -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-missing-local-signatures
    -Wno-prepositive-qualified-module -Wno-missing-import-lists
    -Wno-all-missed-specializations -Wno-unticked-promoted-constructors
    -fprint-explicit-foralls -fno-show-valid-hole-fits
    -Wno-unused-type-patterns

  build-depends:
    , base      >=4.15
    , sop-core  ^>=0.5

library
  import:          c
  exposed-modules:
    Plutarch.Core
    Plutarch.Internal.Utilities
